# 3d-viewer

./: .gitignore  .gitmodules  Cargo.toml  README.md
assets/: .gitignore
assets/model/box/: box.blend  box.fbx
assets/plugin/hello/: README.md  hello.c  hello.wasm
src/: lib.rs  main.rs
src/component/: mod.rs
src/component/id/: mod.rs
src/component/node/: mod.rs
src/driver/: mod.rs
src/driver/uuid_driver/: mod.rs
test/: blender.rs  graphics.rs  model.rs  plugin.rs  ruby.rs  tensorflow.rs  uuid.rs
